# clickhouse_UDF

./: .gitignore  notes.md
query/: check_result_error.sql  result.sql  table.sql
script/: check_all.sh  check_result_error.sh  create_fifo_table.sh  create_haircut_result_table.sh  create_haircut_table.sh  create_result.sh  create_result_all.sh  create_table.sh  create_table_all.sh  drop_result_all.sh  make_install_all.sh
src/cpp/: config.h.in~  config.status  haircut.cpp  myprogram  test.cpp
src/cpp/autom4te.cache/: output.0  output.2  output.3  traces.9
src/cpp/fifo/: Makefile  config.status  configure.ac  configure~  fifo  fifo.cpp
src/cpp/haircut/: Makefile  Makefile.am  Makefile.in  config.guess  config.sub  configure  configure~  haircut  haircut.cpp  test
src/cpp/rand/: Makefile  Makefile.am  Makefile.in  conf.h  config.status  configure  configure.ac  rand  rand.cpp  truncated_normal.hpp
src/cpp/uniform/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure~  uniform  uniform.cpp
src/python/: fifo.py  haircut.py  poison.py  rand.py  test.py
src/test/: Makefile  Makefile.am  compile  conf.h.in  config.h.in  config.status  configure.ac  configure.scan  configure~  haircut  haircut.cpp  rand.cpp  test.cpp  truncated_normal.hpp.in  truncated_normal_test.cpp
src/test/.deps/: haircut.Po  test.Po
src/test/autom4te.cache/: output.5  output.7  output.8  traces.3  traces.6  traces.8
src/test/include/: truncated_normal.cpp
table/: fifo.sql  fifo_result.sql  haircut.sql
test/: cpp.sql  fifo.sql  random.sql
(+27 files in other folders)
